[gd_scene load_steps=4 format=3 uid="uid://dbwep0qj6sw6w"]

[ext_resource type="Texture2D" uid="uid://c7vrifdgm18i2" path="res://Graphics/icon.svg" id="1_tlngn"]
[ext_resource type="Script" path="res://Scripts/Test_Player.gd" id="2_ps8u1"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="3_3281n"]

[node name="Battle" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(571, 540.5)
scale = Vector2(11.25, 1.69531)
texture = ExtResource("1_tlngn")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(79, 412)
texture = ExtResource("1_tlngn")
script = ExtResource("2_ps8u1")
Spd = 10
metadata/_edit_group_ = true

[node name="Character_Button" type="Button" parent="Character"]
modulate = Color(1, 1, 1, 0)
offset_left = -65.0
offset_top = -63.0
offset_right = 65.0
offset_bottom = 65.0
toggle_mode = true

[node name="Menu" type="Node" parent="Character/Character_Button"]

[node name="Panel" type="Panel" parent="Character/Character_Button/Menu"]
visible = false
self_modulate = Color(1, 1, 1, 0.333333)
offset_left = 242.0
offset_top = 187.0
offset_right = 444.0
offset_bottom = 327.0

[node name="Attack_1" type="Button" parent="Character/Character_Button/Menu/Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 9.0
offset_right = 189.0
offset_bottom = 34.0
text = "Attack 1
"

[node name="Attack_2" type="Button" parent="Character/Character_Button/Menu/Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 54.0
offset_right = 189.0
offset_bottom = 85.0
text = "Attack 2"

[node name="Attack_3" type="Button" parent="Character/Character_Button/Menu/Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 99.0
offset_right = 188.0
offset_bottom = 130.0
text = "Attack 3
"

[node name="Timer" type="Timer" parent="Character"]
one_shot = true

[node name="Enemy" type="Sprite2D" parent="."]
modulate = Color(1, 0.329412, 0.341176, 1)
position = Vector2(763, 429)
texture = ExtResource("1_tlngn")
script = ExtResource("3_3281n")
Name = "Shmorgashnap Nettleborp"
Spd = 50

[node name="Enemy_Button2" type="Button" parent="Enemy"]
modulate = Color(1, 1, 1, 0)
offset_left = -62.0
offset_top = -67.0
offset_right = 63.0
offset_bottom = 63.0

[node name="Timer" type="Timer" parent="Enemy"]
one_shot = true

[node name="Enemy2" type="Sprite2D" parent="."]
modulate = Color(1, 0.329412, 0.341176, 1)
position = Vector2(815, 572)
texture = ExtResource("1_tlngn")
script = ExtResource("3_3281n")
Name = "Jerry"
Spd = 10

[node name="Enemy_Button" type="Button" parent="Enemy2"]
modulate = Color(1, 1, 1, 0)
offset_left = -63.0
offset_top = -65.0
offset_right = 62.0
offset_bottom = 65.0

[node name="Timer" type="Timer" parent="Enemy2"]
one_shot = true

[node name="Enemy3" type="Sprite2D" parent="."]
modulate = Color(1, 0.329412, 0.341176, 1)
position = Vector2(1015, 483)
texture = ExtResource("1_tlngn")
script = ExtResource("3_3281n")
Name = "Vourge"

[node name="Enemy_Button3" type="Button" parent="Enemy3"]
modulate = Color(1, 1, 1, 0)
offset_left = -63.0
offset_top = -63.0
offset_right = 62.0
offset_bottom = 67.0

[node name="Timer" type="Timer" parent="Enemy3"]
one_shot = true

[connection signal="pressed" from="Character/Character_Button" to="Character" method="_on_character_button_pressed"]
[connection signal="toggled" from="Character/Character_Button" to="Character" method="_on_character_button_toggled"]
[connection signal="pressed" from="Character/Character_Button/Menu/Panel/Attack_1" to="Character" method="_on_attack_1_pressed"]
[connection signal="pressed" from="Character/Character_Button/Menu/Panel/Attack_2" to="Character" method="_on_attack_2_pressed"]
[connection signal="pressed" from="Character/Character_Button/Menu/Panel/Attack_3" to="Character" method="_on_attack_3_pressed"]
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_timer_timeout"]
[connection signal="timeout" from="Enemy2/Timer" to="Enemy2" method="_on_timer_timeout"]
[connection signal="timeout" from="Enemy3/Timer" to="Enemy3" method="_on_timer_timeout"]
